--- a/BinanceStream/requirements.txt
+++ b/BinanceStream/requirements.txt
@@ -6,3 +6,36 @@ ipython==8.21.0
 Jinja2==3.1.3
 websocket-client==1.7.0
 wheel==0.43.0
+asttokens==2.4.1
+contourpy==1.2.0
+cycler==0.12.1
+decorator==5.1.1
+exceptiongroup==1.2.0
+executing==2.0.1
+fonttools==4.49.0
+jedi==0.19.1
+joblib==1.3.2
+kiwisolver==1.4.5
+MarkupSafe==2.1.5
+matplotlib-inline==0.1.6
+packaging==23.2
+parso== 0.8.3
+pexpect== 4.9.0
+pillow==10.2.0
+pip==22.0.2
+prompt-toolkit==3.0.43
+psycopg2-binary==2.9.9
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.17.2
+pyparsing==3.1.1
+python-dateutil==2.8.2
+pytz==2024.1
+scipy==1.12.0
+setuptools==59.6.0
+six==1.16.0
+stack-data==0.6.3
+threadpoolctl==3.3.0
+traitlets==5.14.1
+tzdata==2024.1
+wcwidth==0.2.13
